# python-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  dev.Dockerfile  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  tests.yaml
