[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "PYTHON TEMPLATE"
version = "0"
description = ""
package-mode = false
authors = ["Tianle Chen <tianlechen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.3" # should match Dockerfile

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pre-commit = "^4.2.0"
